Add Cucumber feature testing
We want to be able to test and build our our system from the perspective of the
user.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,16 +3,14 @@ version: '2'
 services:
   db:
     image: postgres
-
   web:
     build: .
-    command: 'bash -c ''bin/server'''
+    command: 'bash -c ''bundle exec puma -C config/puma.rb'''
     depends_on:
       - db
     working_dir: /app/user
     environment:
       PORT: 3000
-      DATABASE_URL: 'postgres://db:5432/postgres'
     ports:
       - '3000:3000'
     volumes:
