Add npm command to run dev on local network

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev-lan": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
